# YATL

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  YATL.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/examples/: Makefile  cmake_install.cmake  example1  replace_array
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_yatl
cmake/: yatlConfig.cmake.in
docs/: annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__yatl__doc.html  group__yatl__doc.js  group__yatl__enums.html  group__yatl__enums.js  group__yatl__init.html  group__yatl__init.js  group__yatl__logging.html  group__yatl__logging.js  group__yatl__span.html  group__yatl__span.js  group__yatl__span__modify.html  group__yatl__span__modify.js  group__yatl__span__nav.html  group__yatl__span__nav.js  group__yatl__span__query.html  group__yatl__span__query.js  group__yatl__types.html  group__yatl__types.js  index.html  index.js  menudata.js  navtreedata.js  navtreeindex0.js  structYATL__Cursor.html  structYATL__Doc.html  structYATL__Line.html  structYATL__Span.html  (+5 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  groups_9.js  groups_a.js  groups_b.js  pages_0.js  pages_10.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  (+9 more)
examples/: CMakeLists.txt  example1.c  replace_array.c
fuzzers/: CMakeLists.txt  fuzzer_iter.c  run.sh
fuzzers/corpus/: arrays.toml  basic.toml  complex.toml  datatypes.toml  datetime.toml  edge_cases.toml  inline_tables.toml  nested_tables.toml  sample1.toml  strings.toml  test_find.toml  test_updates.toml  whitespace.toml
include/: yatl.h
src/: yatl.c  yatl_lexer.c  yatl_lexer.h  yatl_private.h  yatl_writer.c
tests/: CMakeLists.txt  test_unlink.toml  test_unlink_intermediate.toml  test_updates.toml  test_yatl.c
